@@ -380,7 +380,7 @@ cl_m6809::disass(t_addr addr, const char *sep)
     }
   else if (code == 0x11)
     {
-      tt= disass_m6809_10;
+      tt= disass_m6809_11;
       code= rom->get(++addr);
     }
   else
@@ -451,17 +451,17 @@ cl_m6809::disass(t_addr addr, const char *sep)
 	      }
 	    case 'j': case 'J':
 	      {
-		u8_t mode= code & 0x70;
+		u8_t mode= code & 0x30;
 		switch (mode)
 		  {
-		  case 0x00: // direct
+		  case 0x10: // direct
 		    op8= rom->get(addr++);
 		    work.appendf("DP:0x%02x", op8);
 		    break;
-		  case 0x60: // indexed
+		  case 0x20: // indexed
 		    disass_indexed(&addr, &work, 1/*siz*/);
 		    break;
-		  case 0x70: // extended
+		  case 0x30: // extended
 		    op16= rom->get(addr++)*256;
 		    op16+= rom->get(addr++);
 		    work.appendf("0x%04x", op16);
@@ -522,6 +522,15 @@ cl_m6809::disass(t_addr addr, const char *sep)
 		  work+= "-??";
 		break;
 	      }
+	    case 'e': case 'E':
+	      op16= rom->get(addr++);
+	      if (op16 & 0x80)
+		op16|= 0xff00;
+	      if (b[j]=='E')
+		op16= op16*256 + rom->get(addr++);
+	      op16= (addr + op16)&0xffff;
+	      work.appendf("0x%04x", op16);
+	      break;
 	    }
 	}
       else
@@ -606,6 +615,7 @@ cl_m6809::inst_length(t_addr addr)
   else if (code == 0x11)
     {
       ret= 2;
+      code= rom->get(addr+1);
       if (code==0x3f) return ret;
       int aml= 1;
       switch (code & 0x30)
@@ -773,7 +783,9 @@ cl_m6809::index2ea(u8_t idx, t_addr *res_ea)
 	}
       if (ind && (idx & 0x10))
 	{
-	  ea= rom->read(iv)*256 + rom->read(iv+1);
+	  u16_t a;
+	  a= rom->read(ea)*256 + rom->read(ea+1);
+	  ea= a;
 	  tick(2);
 	}
     }
@@ -841,7 +853,7 @@ cl_m6809::pull_regs(bool do_cc)
 }
 
 int
-cl_m6809::inst_add8(t_mem code, u8_t *acc, u8_t op, int c, bool store)
+cl_m6809::inst_add8(t_mem code, u8_t *acc, u8_t op, int c, bool store, bool invert_c)
 {
   u8_t r;
   unsigned int d= *acc;
@@ -850,10 +862,12 @@ cl_m6809::inst_add8(t_mem code, u8_t *acc, u8_t op, int c, bool store)
 
   if (c) { ++res, ++o; }
   
-  reg.CC= ~(flagH|flagV|flagS|flagZ);
+  reg.CC= ~(flagH|flagV|flagS|flagZ|flagC);
   if ((d & 0xf) + (o & 0xf) > 0xf)  reg.CC|= flagH;
   if ((res < -128) || (res > +127)) reg.CC|= flagV;
   if (d + o > 0xff)                 reg.CC|= flagC;
+  if (invert_c)
+    reg.CC^= flagC;
 
   r= res & 0xff;
   if (r == 0)   reg.CC|= flagZ;
@@ -867,7 +881,7 @@ cl_m6809::inst_add8(t_mem code, u8_t *acc, u8_t op, int c, bool store)
 
 
 int
-cl_m6809::inst_add16(t_mem code, u16_t *acc, u16_t op, int c, bool store)
+cl_m6809::inst_add16(t_mem code, u16_t *acc, u16_t op, int c, bool store, bool invert_c)
 {
   u16_t r;
   unsigned int d= *acc;
@@ -876,11 +890,13 @@ cl_m6809::inst_add16(t_mem code, u16_t *acc, u16_t op, int c, bool store)
 
   if (c) { ++res, ++o; }
   
-  reg.CC= ~(flagV|flagS|flagZ);
+  reg.CC= ~(flagV|flagS|flagZ|flagC);
   if ((res < (int)(0x8000)) || (res > (int)(0x7fff)))
     reg.CC|= flagV;
   if (d + o > 0xffff)
     reg.CC|= flagC;
+  if (invert_c)
+    reg.CC^= flagC;
 
   r= res & 0xffff;
   if (r == 0)     reg.CC|= flagZ;
@@ -1031,17 +1047,18 @@ cl_m6809::inst_alu(t_mem code)
     {
       //          8    9    A    B    C    D    E    F
     case 0x00: // SUB  SUB  SUB  SUB  SUB  SUB  SUB  SUB
-      return inst_add8(code, acc, ~op8, 1, true);
+      return inst_add8(code, acc, ~op8, 1, true, true);
       break;
     case 0x01: // CMP  CMP  CMP  CMP  CMP  CMP  CMP  CMP
-      return inst_add8(code, acc, ~op8, 1, false);
+      return inst_add8(code, acc, ~op8, 1, false, true);
       break;
     case 0x02: // SBC  SBC  SBC  SBC  SBC  SBC  SBC  SBC
-      return inst_add8(code, acc, ~op8, (reg.CC&flagC)?1:0, true);
+      return inst_add8(code, acc, ~op8, (reg.CC&flagC)?0:1, true, true);
       break;
     case 0x03: // SUBD SUBD SUBD SUBD ADDD ADDD ADDD ADDD
       {
 	int c= 0;
+	int inv= false;
 	if ((code & 0x30) == 0)
 	  {
 	    op16= op8*256 + fetch();
@@ -1054,8 +1071,8 @@ cl_m6809::inst_alu(t_mem code)
 	    vc.rd++;
 	  }
 	if ((code & 0x40) == 0)
-	  op16= ~op16, c= 1;
-	return inst_add16(code, &D, op16, c, true);
+	  op16= ~op16, c= 1, inv= true;
+	return inst_add16(code, &D, op16, c, true, inv);
 	break;
       }
     case 0x04: // AND  AND  AND  AND  AND  AND  AND  AND
@@ -1074,13 +1091,13 @@ cl_m6809::inst_alu(t_mem code)
       return inst_bool(code, '^', acc, op8, true);
       break;
     case 0x09: // ADC  ADC  ADC  ADC  ADC  ADC  ADC  ADC
-      return inst_add8(code, acc, op8, (reg.CC&flagC)?1:0, true);
+      return inst_add8(code, acc, op8, (reg.CC&flagC)?1:0, true, false);
       break;
     case 0x0a: // OR   OR   OR   OR   OR   OR   OR   OR
       return inst_bool(code, '|', acc, op8, true);
       break;
     case 0x0b: // ADD  ADD  ADD  ADD  ADD  ADD  ADD  ADD
-      return inst_add8(code, acc, op8, 0, true);
+      return inst_add8(code, acc, op8, 0, true, false);
       break;
     case 0x0c: // CMPX CMPX CMPX CMPX LDD  LDD  LDD  LDD
       if ((code & 0x30) == 0)
@@ -1095,7 +1112,7 @@ cl_m6809::inst_alu(t_mem code)
 	  vc.rd++;
 	}
       if ((code & 0x40) == 0)
-	return inst_add16(code, &(reg.X), ~op16, 1, false);
+	return inst_add16(code, &(reg.X), ~op16, 1, false, true);
       else
 	return inst_ld16(code, &D, op16);
       break;
@@ -1606,14 +1623,14 @@ cl_m6809::inst_neg(t_mem code, u8_t *acc, t_addr ea, u8_t op8)
   if (acc)
     {
       *acc= ~(*acc);
-      return inst_add8(code, acc, 0, 1, true);
+      return inst_add8(code, acc, 0, 1, true, true);
     }
   op8= rom->read(ea);
   tick(1);
   vc.rd++;
   u8_t t= A;
   A= ~op8;
-  inst_add8(code, &A, 0, 1, true);
+  inst_add8(code, &A, 0, 1, true, true);
   rom->write(ea, A);
   tick(1);
   vc.wr++;
@@ -2070,10 +2087,10 @@ cl_m6809::inst_page1(t_mem code)
   switch (cl)
     {
     case 3: // CMPD
-      inst_add16(code, &(D), ~op16, 1, false);
+      inst_add16(code, &(D), ~op16, 1, false, true);
       break;
     case 0xc: // CMPY
-      inst_add16(code, &(reg.Y), ~op16, 1, false);
+      inst_add16(code, &(reg.Y), ~op16, 1, false, true);
       break;
     case 0xe: // LDY, LDS
       if ((code & 0x40) == 0)
@@ -2118,16 +2135,21 @@ cl_m6809::inst_page2(t_mem code)
       (code!=0xb3)&&(code!=0xbc))
     return resINV_INST;
 
-  switch (code & 0xf0)
+  switch (code & 0x30)
     {
-    case 0x00: // direct
+    case 0x00: //immediate
+      ea= PC;
+      op8= fetch();
+      tick(1);
+      break;
+    case 0x10: // direct
       ea= reg.DP*256 + fetch();
       tick(1);
       op8= rom->read(ea);
       tick(1);
       vc.rd++;
       break;
-    case 0x60: // index
+    case 0x20: // index
       {
 	int r;
 	idx= fetch();
@@ -2139,7 +2161,7 @@ cl_m6809::inst_page2(t_mem code)
 	vc.rd++;
 	break;
       }
-    case 0x70: // extend
+    case 0x30: // extend
       ea= fetch()*256 + fetch();
       tick(2);
       op8= rom->read(ea);
@@ -2163,13 +2185,13 @@ cl_m6809::inst_page2(t_mem code)
   if ((code & 0x0f) == 0x03)
     {
       // CMPU
-      inst_add16(code, &(reg.U), ~op16, 1, false);
+      inst_add16(code, &(reg.U), ~op16, 1, false, true);
       tick(1);
     }
   if ((code & 0x0f) == 0x0c)
     {
       // CMPS
-      inst_add16(code, &(reg.S), ~op16, 1, false);
+      inst_add16(code, &(reg.S), ~op16, 1, false, true);
       tick(1);
     }
 
